# Academic-RAG-chatbot

./: LICENSE  academic-rag-chatbot-implementation-guide.md
academic-rag-chatbot/: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.ps1
academic-rag-chatbot/.github/workflows/: ci.yml
academic-rag-chatbot/app/: config.py  main.py
academic-rag-chatbot/app/api/: deps.py  rate_limit.py
academic-rag-chatbot/app/api/routes/: chat.py  documents.py  evaluation.py
academic-rag-chatbot/app/core/generation/: chain.py  citations.py  prompts.py
academic-rag-chatbot/app/core/ingestion/: chunker.py  embedder.py  loader.py
academic-rag-chatbot/app/core/memory/: cache.py  doc_store.py  history.py
academic-rag-chatbot/app/core/retrieval/: reranker.py  retriever.py
academic-rag-chatbot/app/models/: schemas.py
academic-rag-chatbot/app/static/: index.html
academic-rag-chatbot/docker/: Dockerfile  docker-compose.yml
academic-rag-chatbot/evaluation/: pipeline.py
academic-rag-chatbot/evaluation/datasets/: test_qa.json
academic-rag-chatbot/scripts/: benchmark.py  ingest.py  run_eval.py  test_retrieval.py
academic-rag-chatbot/tests/: conftest.py  load_test.py
academic-rag-chatbot/tests/integration/: test_chat_api.py
academic-rag-chatbot/tests/unit/: test_cache.py  test_chunker.py  test_citations.py  test_doc_store.py  test_ingestion_and_memory.py  test_loader.py  test_num_predict.py  test_post_retrieval.py  test_reranker.py
